# wgpu-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/buffers/: CMakeLists.txt  main.cpp
examples/dynamic_uniforms/: CMakeLists.txt  main.cpp
examples/pyramid/: CMakeLists.txt  main.cpp
examples/square/: CMakeLists.txt  main.cpp
examples/texture/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
examples/uniforms/: CMakeLists.txt  main.cpp
examples/window/: CMakeLists.txt  main.cpp
src/private/: wgpu.cpp
src/public/: wgpu.hpp
